<resources>
    <string name="app_name">ToolBarAssignment</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="delete">Delete</string>
    <string name="forward">Forward</string>
    <string name="forward_message">Forward Message</string>
    <string name="to">To:</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name:</string>
    <string name="text">Text:</string>
    <string name="send">Send</string>
    <string name="message_email_deleted">Email Deleted</string>
</resources>